--- a/dingtalk/template.yml
+++ b/dingtalk/template.yml
@@ -62,9 +62,11 @@ Resources:
 
 
 Outputs :
-  LambdaFunctionArn :
-    Value: !GetAtt DingTalkHandler.Arn 
+  SNSArn:
+    Value: !GetAtt DingTalkEventTopic.TopicArn
   WebHook:
+    Description: "The Webhook address"
     Value: !Ref WebHook
   BotSecretKey:
+    Description: "The SecretKey of Bot"
     Value: !Ref BotSecretKey
